--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,108 @@
-h1{color:#fff}body,html{background:#74ebd5;background:-webkit-linear-gradient(to right, #ACB6E5, #74ebd5);background:linear-gradient(to right, #ACB6E5, #74ebd5);height:100vh}
+html{
+    font-family: 'Saira', sans-serif;
+}
+
+a{
+    font-family: 'Saira', sans-serif;
+}
+
+
+.custom-toggler{
+    position: relative;
+}
+.custom-toggler.navbar-toggler:focus,
+.custom-toggler.navbar-toggler:active {
+    outline: 0;
+}
+
+.custom-toggler.navbar-toggler span {
+   display: block;
+   background-color: #fff;
+   height: 3px;
+   width: 25px;
+   margin-top: 4px;
+   margin-bottom: 4px;
+   -webkit-transform: rotate(0deg);
+   -moz-transform: rotate(0deg);
+   -o-transform: rotate(0deg);
+   transform: rotate(0deg);
+   position: relative;
+   left: 0;
+   opacity: 1;
+   cursor: pointer;
+}
+
+.custom-toggler.navbar-toggler span:nth-child(1),
+.custom-toggler.navbar-toggler span:nth-child(3) {
+   -webkit-transition: transform .35s ease-in-out;
+   -moz-transition: transform .35s ease-in-out;
+   -o-transition: transform .35s ease-in-out;
+   transition: transform .35s ease-in-out;
+}
+
+.custom-toggler.navbar-toggler:not(.collapsed) span:nth-child(1) {
+    position: absolute;
+    left: 12px;
+    top: 10px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+    opacity: 0.9;
+}
+
+.custom-toggler.navbar-toggler:not(.collapsed) span:nth-child(2) {
+    height: 12px;
+    visibility: hidden;
+    background-color: transparent;
+}
+
+.custom-toggler.navbar-toggler:not(.collapsed) span:nth-child(3) {
+    position: absolute;
+    left: 12px;
+    top: 10px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+    opacity: 0.9;
+}
+
+
+.header{
+    background-image: url("../img/bg_header.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link{
+    color:#fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-size: 1.15rem;
+    
+}
+
+    @media screen and (min-width:768px){
+        .navbar-expand-lg .navbar-nav .nav-link{
+            padding-left:20px;
+            padding-right:20px;
+        }
+
+        .navbar-expand-lg .navbar-nav .nav-link:hover{
+            color:#FD275F;
+        }
+    }
+
+.navbar-brand{
+    max-width: 144px;
+}
+    @media screen and (min-width:1200px){
+        .navbar-brand{
+            max-width: 272px;
+        }
+    }
