--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,44 @@
-html{
-    font-family: 'Saira', sans-serif;
+/* Variables de nuestro Sitio */
+
+:root{
+    /* Colors */
+    --main-bg-color: #FD275F;
+    --main-bg-color-hover : #E35A78;
+    --secundary-color: #53C7F0;
+    --white-color: #ffffff;
+    /* Fonts */
+    --main-font-family: 'Saira', sans-serif;
+    --secundary-font-family: 'Kanit', sans-serif;
+    /* Other Settings */
+    --border-radius: 50px;
+
+
 }
 
+html,
 a{
-    font-family: 'Saira', sans-serif;
+    font-family: var(--main-font-family);
 }
+
+
 
 .btn-primary,
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show>.btn-primary.dropdown-toggle{
-    background-color: #FD275F;
-    border-color: #FD275F;    
+    background-color: var(--main-bg-color);
+    border-color: var(--main-bg-color);
+    padding:0.8rem 1.5rem;
+    border-radius:var(--border-radius);
 }
     .btn-primary:hover{
-        background-color: #E35A78;
-        border-color:#E35A78;
+        background-color: var(--main-bg-color-hover);
+        border-color:var(--main-bg-color-hover);
     }
 
     .btn-primary:focus,
     .btn-primary.focus{
-       box-shadow: 0 0 0 0.2rem rgba(253, 39, 95,0.5);
+       box-shadow: 0 0 0 0.2rem var(--main-bg-color);
     }
 
 
@@ -34,7 +52,7 @@ a{
 
 .custom-toggler.navbar-toggler span {
    display: block;
-   background-color: #fff;
+   background-color: var(--white-color);
    height: 3px;
    width: 25px;
    margin-top: 4px;
@@ -92,15 +110,11 @@ a{
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 80vh;
-    font-family: 'Kanit', sans-serif;
+    height: 100vh;
+    font-family: var(--secundary-font-family);
 }
 
-    @media screen and (min-width:768px){
-        .header{
-            height: 100vh;
-        }
-    }
+    
 
     .header__btn{
         display: inline-block;
@@ -115,23 +129,29 @@ a{
         }
 
     .header__bottom{
-        color:#fff;
+        color:var(--white-color);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: calc(100% - 96px);
         
     }
 
         @media screen and (min-width:768px){
             .header__bottom{
-                color:#fff;
+                color:var(--white-color);
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 height: calc(100% - 176px);
             }
         }
-
-    .header__meta li{
-        display: none;
+    @media screen and (max-width:768px){
+        .header__meta{
+            display: none !important;
+        }
     }
+    
 
         @media screen and (min-width:768px){
             .header__meta li{
@@ -146,7 +166,7 @@ a{
     
     .header__information{
         max-width: 728px;
-        letter-spacing: 2px;
+        letter-spacing: 1px;
     }
         .header__information h2{
             font-size: 2rem;
@@ -161,13 +181,13 @@ a{
                 }
             }
         .header__information strong{
-            color: #53C7F0;
+            color: var(--secundary-color);
             font-weight: 700;
         }
 
         .header__information p{
             font-weight: 300;
-            font-size: 1rem;
+            font-size: 1.3rem;
         }
             @media screen and (min-width:768px){
                 .header__information p{
@@ -188,12 +208,12 @@ a{
     }
 
 .navbar-expand-lg .navbar-nav .nav-link{
-    color:#fff;
+    color:var(--white-color);
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 1px;
     font-size: 1.15rem;
-    border-bottom: 1px dashed #FD275F;
+    border-bottom: 1px dashed var(--main-bg-color);
     padding-top:0.6rem;
     padding-bottom:0.6rem;
     
@@ -207,7 +227,7 @@ a{
         }
 
         .navbar-expand-lg .navbar-nav .nav-link:hover{
-            color:#FD275F;
+            color:var(--main-bg-color);
         }
     }
 
