YV - Section Gallery Beta

--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,50 @@ a{
         }
     }
 
+.gallery{
+    padding-top: var(--padding-section);
+    padding-bottom: var(--padding-section);
+    font-family: var(--secundary-font-family);
+    font-weight: 500;
+}
+
+    .gallery__animation{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        color:var(--white-color);
+        text-align: center;
+        transition: all 3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+    }
+
+    .gallery__animation figcaption{
+        display: none;
+        position: absolute;
+        background-color: rgba(6, 15, 32, 0.7);
+        padding: 1.5rem 0.5rem;
+        border:1px solid var(--white-color);
+        box-shadow: 1px 2px 30px var(--black-color);
+    }
+
+        .gallery__animation:hover figcaption{
+            display: block;
+            
+        }
+
+        @media screen and (min-width:480px){
+            .gallery__animation figcaption{
+                padding: 4.5rem 1rem;
+            } 
+        }
+
+        @media screen and (min-width:992px){
+            .gallery__animation figcaption{
+                padding: 7rem 2rem;
+            } 
+        }
+
 .header{
     background-image: url("../img/bg_header.png");
     background-position: center center;
