--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,7 @@ a{
         color:var(--white-color);
         text-align: center;
         transition: all 3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        margin-bottom: 0;
 
     }
 
@@ -396,6 +397,54 @@ a{
         }
     }
 
+.news{
+    display: none;
+    background-image: url("../img/bg_news.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat:no-repeat;
+    width: 100%;
+    height: 100%;
+    padding-top: var(--padding-section);
+    padding-bottom: var(--padding-section);
+}
+    @media screen and (min-width:768px){
+        .news{
+            display: block;
+        }
+    }
+
+    .news__item figcaption{
+        color: var(--main-bg-color);
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        font-family: var(--secundary-font-family);
+        letter-spacing: var(--letter-spacing);
+        font-weight: 400;
+    }
+
+    .news__item h2{
+        color: var(--white-color);
+        font-weight: 500;
+        letter-spacing: var(--letter-spacing);
+        font-size: 2rem;
+        text-transform: uppercase;
+    }
+
+    .news__item p{
+        color: var(--secundary-color);
+        font-weight: 300;
+        letter-spacing: calc(var(--letter-spacing) - 1px);
+    }
+
+    .news__item--right .news__item{
+        margin-bottom: 6rem;
+    }
+
+        .news__item--right .news__item h2{
+            font-size: 1.6rem;            
+        }
+    
 
 .numberEvents{
     background-color: var(--blue-color);
@@ -406,7 +455,7 @@ a{
 
     .numberEvents__item{
         text-align: center;
-        letter-spacing: calc(var(--letter-spacing) - 1px);;
+        letter-spacing: calc(var(--letter-spacing) - 1px);
     }
         .numberEvents__item h5{
             color: var(--secundary-color);
