--- a/css/main.css
+++ b/css/main.css
@@ -1,804 +1,4 @@
-/* Variables de nuestro Sitio */
-
-:root{
-    /* Colors */
-    --main-bg-color: #FD275F;
-    --main-bg-color-hover : #E35A78;
-    --secundary-color: #53C7F0;
-    --blue-color: #060F20;
-    --white-color: #ffffff;
-    --black-color: #000000;
-    /* Fonts */
-    --main-font-family: 'Saira', sans-serif;
-    --secundary-font-family: 'Kanit', sans-serif;
-    /* Other Settings */
-    --border-radius: 50px;
-    --letter-spacing: 2px;
-    --padding-section: 5rem;
-
-
+body{
+    font-family: 'Kanit', sans-serif;
+    font-family: 'Saira', sans-serif;
 }
-
-html,
-body,
-a{
-    font-family: var(--main-font-family);
-}
-
-.breadcrumb{
-    background-color: transparent;
-    margin-top: 0;  
-    padding-top: 0;  
-}
-    .breadcrumb-item a{
-        color: var(--white-color);
-        font-family: var(--secundary-font-family);
-        letter-spacing: var(--letter-spacing);
-    }
-
-    .breadcrumb-item a.disabled{
-        color: var(--secundary-color);
-        cursor: default;
-        text-transform: uppercase;
-
-    }
-        .breadcrumb-item a.disabled:hover{
-            text-decoration: none;
-        }
-
-.btn-primary,
-.btn-primary:not(:disabled):not(.disabled):active,
-.btn-primary:not(:disabled):not(.disabled).active,
-.show>.btn-primary.dropdown-toggle{
-    background-color: var(--main-bg-color);
-    border-color: var(--main-bg-color);
-    border-radius:var(--border-radius);
-    padding-left:2rem;
-    padding-right:2rem;
-}
-    .btn-primary:hover{
-        background-color: var(--main-bg-color-hover);
-        border-color:var(--main-bg-color-hover);
-    }
-
-    .btn-primary:focus,
-    .btn-primary.focus{
-       box-shadow: 0 0 0 0.2rem var(--main-bg-color);
-    }
-
-.buyTicket{
-    padding-top: var(--padding-section);
-    padding-bottom: var(--padding-section);
-    background-color: var(--blue-color);
-    color: var(--white-color);
-    text-align: center;
-    letter-spacing: calc(var(--letter-spacing) - 1px );
-}
-
-    .buyTicket h3{
-       font-weight: 500;       
-       font-size: 3.5rem; 
-    }
-
-    .buyTicket p{
-        font-family: var(--secundary-font-family);
-        font-weight: 400;
-        color: var(--secundary-color);
-        margin-top: 2rem;
-        margin-bottom:2rem;
-    }
-
-    .buyTicket__container{
-        max-width: 800px;
-        margin-left:auto;
-        margin-right: auto;
-    }
-
-
-.custom-toggler{
-    position: relative;
-}
-.custom-toggler.navbar-toggler:focus,
-.custom-toggler.navbar-toggler:active {
-    outline: 0;
-}
-
-.custom-toggler.navbar-toggler span {
-   display: block;
-   background-color: var(--white-color);
-   height: 3px;
-   width: 25px;
-   margin-top: 4px;
-   margin-bottom: 4px;
-   -webkit-transform: rotate(0deg);
-   -moz-transform: rotate(0deg);
-   -o-transform: rotate(0deg);
-   transform: rotate(0deg);
-   position: relative;
-   left: 0;
-   opacity: 1;
-   cursor: pointer;
-}
-
-.custom-toggler.navbar-toggler span:nth-child(1),
-.custom-toggler.navbar-toggler span:nth-child(3) {
-   -webkit-transition: transform .35s ease-in-out;
-   -moz-transition: transform .35s ease-in-out;
-   -o-transition: transform .35s ease-in-out;
-   transition: transform .35s ease-in-out;
-}
-
-.custom-toggler.navbar-toggler:not(.collapsed) span:nth-child(1) {
-    position: absolute;
-    left: 12px;
-    top: 10px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg);
-    opacity: 0.9;
-}
-
-.custom-toggler.navbar-toggler:not(.collapsed) span:nth-child(2) {
-    height: 12px;
-    visibility: hidden;
-    background-color: transparent;
-}
-
-.custom-toggler.navbar-toggler:not(.collapsed) span:nth-child(3) {
-    position: absolute;
-    left: 12px;
-    top: 10px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-    opacity: 0.9;
-}
-
-.djs{
-    padding-top: var(--padding-section);
-    padding-bottom: var(--padding-section);
-    position: relative;
-}
-    .djs__gallery{
-       
-    }
-
-        .djs__gallery h5{
-            font-family: var(--secundary-font-family);
-            font-weight: 400;
-            letter-spacing: var(--letter-spacing);
-            color:var(--black-color);
-            font-size:1.8rem;
-            margin-top:0.5rem;
-            margin-bottom: 0;
-        }
-        .djs__gallery h6{
-            font-weight: 300;
-            font-family: var(--secundary-font-family);
-            font-size:1rem;
-            color: #333333;
-            
-        }
-    
-    @media screen and (min-width:768px){
-        .djs__information p{
-            margin-top: 4rem;
-        }
-    }
-
-.festivalMusic{
-    padding-top: var(--padding-section);
-    padding-bottom: var(--padding-section);
-}
-    .festivalMusic p{
-        margin-left:-15px;
-        display: none;
-    }
-        @media screen and (min-width:768px){
-            .festivalMusic p{
-                display: block;
-            }
-        }
-
-    .festivalMusic__specials{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-top: 3rem;
-        
-    }
-
-        .festivalMusic__specials .numberEvents__item{
-            margin:1rem 2rem;
-        }
-
-        @media screen and (min-width:768px){
-            .festivalMusic__specials .numberEvents__item{
-                margin:1rem 0;
-            }
-        }
-
-        @media screen and (min-width:1024px){
-            .festivalMusic__specials .numberEvents__item{
-                margin:1rem 2rem;
-            }
-        }
-
-        .festivalMusic__specials  .numberEvents__item h5{
-            color: var(--blue-color);
-        }
-
-.footer{
-    background-color: var(--black-color);
-    color: var(--white-color);
-    overflow: hidden;
-    text-align: center;
-}
-
-    .footer__information{
-        margin-left:auto;
-        margin-right:auto;
-        padding-bottom: 3rem;
-        padding-top: 3rem;
-    }
-        @media screen and (min-width:992px){
-            .footer__information{
-               padding-left: 3.5rem
-            }
-        }
-
-        @media screen and (min-width:1200px){
-            .footer__information{
-               padding-left: 7.5rem
-            }
-        }
-    
-
-    .footer__nav a{
-        display: block;
-        color: var(--main-bg-color);
-        font-weight: 500;
-        letter-spacing: var(--letter-spacing);
-        text-transform: uppercase;
-        font-size:0.7rem;
-
-    }
-        .footer__nav a:hover{
-            text-decoration: none;
-            color:var(--main-bg-color-hover);
-        }
-    
-    @media screen and (min-width:1024px){
-        .footer{
-            text-align: left;
-        }
-        .footer__nav a{
-            font-size:0.7rem;
-        }
-    }
-
-    @media screen and (min-width:1200px){
-        .footer__nav a{
-            font-size:0.9rem;
-        }
-    }
-
-
-.gallery{
-    padding-top: var(--padding-section);
-    padding-bottom: var(--padding-section);
-    font-family: var(--secundary-font-family);
-    font-weight: 500;
-}   
-    .gallery p{
-           font-family: var(--main-font-family);
-           font-weight: 400;
-        }
-
-    @media screen and (min-width:768px){
-        .gallery p{
-            margin-left:-15px;
-        }
-    }
-
-    .gallery__animation{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        color:var(--white-color);
-        text-align: center;
-        transition: all 3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        margin-bottom: 0;
-
-    }
-
-    .gallery__animation figcaption{
-        display: none;
-        position: absolute;
-        background-color: rgba(6, 15, 32, 0.7);
-        padding: 1.5rem 0.5rem;
-        border:1px solid var(--white-color);
-        box-shadow: 1px 2px 30px var(--black-color);
-    }
-
-        .gallery__animation:hover figcaption{
-            display: block;
-            
-        }
-
-        @media screen and (min-width:480px){
-            .gallery__animation figcaption{
-                padding: 4.5rem 1rem;
-            } 
-        }
-
-        @media screen and (min-width:992px){
-            .gallery__animation figcaption{
-                padding: 7rem 2rem;
-            } 
-        }
-
-.header{
-    background-image: url("../img/bg_header.png");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    font-family: var(--secundary-font-family);
-}   
-
-    .header__btn{
-        display: inline-block;
-        width: 100%;
-        text-align: center;
-    }
-
-        @media screen and (min-width:768px){
-           .header__btn{
-               text-align: left;
-           } 
-        }
-
-    .header__bottom{
-        color:var(--white-color);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: calc(100% - 96px);
-        
-    }
-
-        @media screen and (min-width:768px){
-            .header__bottom{
-                color:var(--white-color);
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                height: calc(100% - 176px);
-            }
-        }
-    @media screen and (max-width:768px){
-        .header__meta{
-            display: none !important;
-        }
-    }
-    
-
-        @media screen and (min-width:768px){
-            .header__meta li{
-                margin-left:1rem;
-                margin-right:1rem;
-                display: block;
-            }
-                .header__meta li:first-child{
-                    margin-left:0;
-                }
-        }
-    
-    .header__information{
-        max-width: 728px;
-        letter-spacing: calc(var(--letter-spacing) - 1px);
-    }
-        .header__information h2{
-            font-size: 2rem;
-            font-weight: 500;
-            text-transform: uppercase;
-            text-align: center;
-        }
-            @media screen and (min-width:768px){
-                .header__information h2{
-                    font-size: 3.75rem;
-                    text-align: left;
-                }
-            }
-        .header__information strong{
-            color: var(--secundary-color);
-            font-weight: 700;
-        }
-
-        .header__information p{
-            font-weight: 300;
-            font-size: 1.3rem;
-        }
-            @media screen and (min-width:768px){
-                .header__information p{
-                    font-size: 1.3rem;
-                }
-            }
-    
-        .header--notHome{
-            background-image: url("../img/bg_wp_festival.png");
-            height: 70vh;
-        }
-
-            .header--notHome .header__bottom{
-                display: flex;
-                align-items: center;
-            }
-
-.list-square li::before{
-    content: "■";
-    color: var(--secundary-color);
-    margin-right: 10px;
-}
-
-
-.presentations{
-    background-image: url("../img/bg_presentations.png");
-    width: 100%;
-    height: 100%;
-    background-size:cover;
-    background-position: center center;
-    color: var(--white-color);
-    padding-left:18px;
-    padding-right:18px;
-    padding-bottom:var(--padding-section);
-    padding-top:var(--padding-section);
-    position: relative;
-}
-
-    .presentations p{
-        color: var(--secundary-color);
-        font-family: var(--main-font-family);
-        font-size: 1.2rem;
-        max-width: 650px;
-        margin-right: -15px;
-        margin-left: -15px;
-        text-align: center;
-        letter-spacing: calc(var(--letter-spacing) - 1px );
-        
-    }
-        @media screen and (min-width:768px){
-           .presentation {
-               padding-left:0;
-               padding-right:0;
-           }
-           .presentations p{
-               text-align: left;
-               font-weight: 700;
-           } 
-        }
-
-    .presentations__details{
-        background-color: rgba(0, 0, 0, 0.6);
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-        transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
-        
-    }
-        .presentations__details:hover{
-            background-color: var(--main-bg-color);
-        }
-
-        .presentations__details:hover a{
-            border-color:var(--white-color);
-        }
-        
-        .presentations__details--title{
-            text-transform: uppercase;
-            font-size:1rem;
-            font-weight: 500;
-            letter-spacing:calc(var(--letter-spacing) + 1px);
-        }
-        .presentations__details--information{
-            font-family: var(--secundary-font-family);
-            font-size:1rem;
-            font-weight: 500;
-        }
-
-            @media screen and (min-width:768px){
-                .presentations__details--title{
-                    font-size:1.3rem; 
-                }
-                .presentations__details--information{
-                   font-size:1.3rem;
-                }
-            }
-
-    .navbar-absolute{
-        position: absolute;
-        top: 90px;
-        background-color: rgba(9, 16, 44 ,1);
-        left: 0;
-        right: 0;
-        padding-top:20px;
-        padding-bottom:20px;
-    }
-
-.navbar-expand-lg .navbar-nav .nav-link{
-    color:var(--white-color);
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: calc(var(--letter-spacing) - 1px);;
-    font-size: 1.15rem;
-    border-bottom: 1px dashed var(--main-bg-color);
-    padding-top:0.6rem;
-    padding-bottom:0.6rem;    
-}
-
-    @media screen and (min-width:768px){
-        .navbar-expand-lg .navbar-nav .nav-link{
-            padding-left:20px;
-            padding-right:20px;
-            border-bottom: 0;
-        }
-
-        .navbar-expand-lg .navbar-nav .nav-link:hover{
-            color:var(--main-bg-color);
-        }
-    }
-
-    .navbar-expand-lg .navbar-nav .nav-link.current_page_item{
-        color:var(--main-bg-color);
-    }
-
-.navbar-brand{
-    max-width: 144px;
-}
-    @media screen and (min-width:1200px){
-        .navbar-brand{
-            max-width: 272px;
-        }
-    }
-
-.news{
-    display: none;
-    background-image: url("../img/bg_news.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat:no-repeat;
-    width: 100%;
-    height: 100%;
-    padding-top: var(--padding-section);
-    padding-bottom: var(--padding-section);
-}
-    @media screen and (min-width:768px){
-        .news{
-            display: block;
-        }
-    }
-
-    .news__item figcaption{
-        color: var(--main-bg-color);
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-        font-family: var(--secundary-font-family);
-        letter-spacing: var(--letter-spacing);
-        font-weight: 400;
-    }
-
-    .news__item h2{
-        color: var(--white-color);
-        font-weight: 500;
-        letter-spacing: var(--letter-spacing);
-        font-size: 2rem;
-        text-transform: uppercase;
-    }
-
-    .news__item p{
-        color: var(--secundary-color);
-        font-weight: 300;
-        letter-spacing: calc(var(--letter-spacing) - 1px);
-    }
-
-    .news__item--right .news__item{
-        margin-bottom: 6rem;
-    }
-
-        .news__item--right .news__item h2{
-            font-size: 1.6rem;            
-        }
-    
-
-.numberEvents{
-    background-color: var(--blue-color);
-    color:var(--white-color);
-    padding-top: var(--padding-section);
-    padding-bottom: var(--padding-section);
-}
-
-    .numberEvents__item{
-        text-align: center;
-        letter-spacing: calc(var(--letter-spacing) - 1px);
-    }
-        .numberEvents__item h5{
-            color: var(--secundary-color);
-            font-family: var(--secundary-font-family);
-            font-weight: 400;
-            font-size:1.25rem;
-        }
-        .numberEvents__item h6{
-            font-size:2.5rem;
-            font-weight: 500;
-            font-family: var(--main-font-family);
-            margin-bottom: 0;
-            margin-top: 1rem;
-        }
-
-
-.sectionBorder--bottom:before{
-    right: 0;
-    bottom:0;
-    position: absolute;
-    width:10px;
-    height: 141px;
-    background-color:var(--main-bg-color);
-    content: "";
-}
-
-.sectionBorder--top:after{
-    left:0;
-    top: 0;
-    position: absolute;
-    width:10px;
-    height: 141px;
-    background-color:var(--main-bg-color);
-    content: "";
-}
-
-.slick-slide{
-    margin-right: 1rem;    
-}
-
-.sponsors{
-    background-image: url("../img/bg_sponsor.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-    height: auto;
-    padding-top: var(--padding-section);
-    padding-bottom: var(--padding-section);
-}
-
-.subtitle{
-    color: #53C7F0;
-    max-width: 400px;
-    font-size: 1.2rem;
-    margin-left: -15px;
-}
-
-.text--red{
-    color: var(--main-bg-color-hover);
-}
-
-.text--pink{
-    color: #E25ABC;
-}
-
-.text--purple{
-    color: #7E5AE2;
-}
-
-.tickets{
-    background-color: var(--blue-color);
-    padding-top: var(--padding-section);
-    padding-bottom: var(--padding-section);
-    box-sizing: border-box;
-    padding-left:15px;
-    padding-right:15px;
-}
-    @media screen and (min-width:768px){
-        .tickets{
-            padding-left:0;
-            padding-right:0;
-        }
-    }
-    .tickets__price{
-        background-color:#24243C;
-        color:var(--white-color);
-        text-align: center;
-        padding: 3rem;
-        margin:1rem;
-        transition:all .3s ease-out;
-    }
-        .tickets__price:hover{
-             background-color: var(--blue-color);
-        }
-
-    .tickets__value li{
-        margin-right:0.5rem;
-    }
-
-    .tickets__number{
-        color: var(--secundary-color);
-        font-size:3rem;
-        font-weight: 500;
-        letter-spacing: var(--letter-spacing);
-    }
-        .tickets__number:before{
-            content: "$"
-        }
-
-        .tickets__number:after{
-            content: "usd";
-            font-size:1rem;
-        }
-
-
-
-.title{
-    font-family: var(--main-font-family);
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 1.86rem;
-    margin-bottom: 1.5rem;
-    margin-right: -15px;
-    margin-left: -15px;
-    text-align: center;
-}
-    .title:after{
-        max-width: 170px;
-        width: 100%;
-        background-color: var(--main-bg-color);
-        height: 3px;
-        content: " ";
-        display: block;
-        margin-left:auto;
-        margin-right: auto;
-    }
-
-    @media screen and (min-width:768px){
-        .title{
-            text-align: left;
-            font-size: 2.5rem;
-        }
-
-        .title:after{
-            margin-left:0;
-        }
-    }
-
-
-    .title--white{
-        color:var(--white-color);
-    }
-
-    .title--black{
-        color:#19112A;
-    }
-
-    .title--page{
-        margin-bottom: 0;
-        font-family: var(--secundary-font-family);
-        letter-spacing: var(--letter-spacing);
-        font-size: 3.5rem;
-    }
-
-    .title--page:after{
-        display: none;
-    }
-
-    .title--small:after{        
-        
-    }
-        @media screen and (min-width:768px){
-            .title--small:after{
-                margin-left:auto;
-                margin-right: 0;
-            }
-        }
