--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,6 @@
     --border-radius: 50px;
     --letter-spacing: 2px;
     --padding-section: 5rem;
-
-
 }
 
 html,
@@ -185,6 +183,85 @@ a{
     padding-bottom: var(--padding-section);
     position: relative;
 }
+    
+    
+
+    .djs__animation {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        background: var(--main-bg-color);
+        background: -moz-linear-gradient(90deg, var(--main-bg-color) 0%, var(--secundary-color) 100%, var(--secundary-color) 100%);
+        background: -webkit-linear-gradient(90deg, var(--main-bg-color) 0%, var(--secundary-color) 100%, var(--secundary-color) 100%);
+        background: linear-gradient(90deg, var(--main-bg-color) 0%, var(--secundary-color) 100%, var(--secundary-color) 100%);
+    }
+
+    .djs__animation img,
+    .djs__animation:before,
+    .djs__animation:after {
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+    }
+
+    .djs__animation img {
+        max-width: 100%;
+        backface-visibility: hidden;
+        vertical-align: top;
+    }
+
+    .djs__animation:before,
+    .djs__animation:after {
+        content: '';
+        background-color: #fff;
+        position: absolute;
+        z-index: 1;
+        top: 50%;
+        left: 50%;
+        opacity: 0;
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+
+    .djs__animation:before {
+        width: 60px;
+        height: 1px;
+        left: 100%;
+    }
+
+    .djs__animation:after {
+        height: 60px;
+        width: 1px;
+        top: 0%;
+    }
+
+    .djs__animation a {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+    }
+
+    .djs__animation:hover img,
+    .djs__animation.hover img {
+        zoom: 1;
+        filter: alpha(opacity=50);
+        -webkit-opacity: 0.5;
+        opacity: 0.5;
+    }
+
+    .djs__animation:hover:before,
+    .djs__animation.hover:before,
+    .djs__animation:hover:after,
+    .djs__animation.hover:after {
+        opacity: 1;
+        top: 50%;
+        left: 50%;
+    }
+    
     .djs__centerMobile{
         max-width:300px;
         margin-left:auto;
